--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/shortener
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+server.port=8090
