--- a/build.gradle
+++ b/build.gradle
@@ -20,5 +20,7 @@ dependencies {
 	implementation 'org.liquibase:liquibase-core'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	compile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+	// https://projectlombok.org
+	compileOnly 'org.projectlombok:lombok:1.18.4'
+	annotationProcessor 'org.projectlombok:lombok:1.18.4'
 }
