--- a/build.gradle
+++ b/build.gradle
@@ -23,4 +23,5 @@ dependencies {
 	// https://projectlombok.org
 	compileOnly 'org.projectlombok:lombok:1.18.4'
 	annotationProcessor 'org.projectlombok:lombok:1.18.4'
+	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.12.0'
 }
