middle of collision validation

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -24,7 +24,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: expiration_date
-                  type: datetime
+                  type: bigint
                   constraints:
                     nullable: false
         - createSequence:
