--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -30,5 +30,5 @@ databaseChangeLog:
         - createSequence:
             incrementBy: 1
             schemaName: public
-            sequenceName: pk_sequence
+            sequenceName: short_sequence
             startValue: 1
